05-networkpolicy/firefox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
  namespace: dev
  labels:
    app: firefox
spec:
  containers:
  - name: 
    image: lesage/firefox
    ports:
      - containerPort: 5800
