05-networkpolicy/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: dev
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx:alpine-perl
      ports:
        - containerPort: 80
